# server/src/modules/controllers/InvoiceController.ts
@@ -1,5 +1,4 @@
 import { Request, Response } from "express";
-import { InvoiceType } from "../entities/Invoice";
 import { ServerError } from "../errors/ServerError";
 import { InvoiceRepository } from "../repositories/InvoiceRepository";
 import { InvoiceService } from "../service/InvoiceService";
@@ -15,27 +14,33 @@ export class InvoiceController {
     if (!req.body.date) {
       errors.push('no date specified')
     }
-    if (!req.body.items || req.body.items.length == 0) {
+    if (!req.body.totalValue) {
+      errors.push('no total value specified')
+    }
+    if (!req.body.items) {
       errors.push('no items specified')
     }
     if (errors.length) {
       throw new ServerError(errors.join())
     }
 
-    const { invoiceType, date, items } = req.body
-
-    console.log(items)
+    const { invoiceType, date, items, totalValue } = req.body
 
     const invoice = InvoiceRepository.create({
       invoiceType,
       date,
-      items
+      items,
+      totalValue
     })
 
     const newInvoice = await new InvoiceService().create(invoice)
 
+    if (newInvoice == null) {
+      throw new ServerError(`invalid quantity for product`, 400)
+    }
+
     return res.status(201).json({
-      "data": newInvoice
+      "invoice": newInvoice
     })
 
   }
